--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -2,6 +2,8 @@ branch-defaults:
   default:
     environment: django-env
     group_suffix: null
+  master:
+    environment: django-env
 environment-defaults:
   django-env:
     branch: null
